--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         </div>
       </div>
       <div class="col-md-5">
-        <div id="bar"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge">
+        <div id="bar">
           <p>
             This parragraph reflects the amount of bacteria that can be found per sample. Drag the mouse to read further information.
           </p>
+        </div>
+      </div>
+      <div class="col-md-5">
+        <div id="gauge">
         </div>
       </div>
     </div>
